[gd_scene load_steps=8 format=3 uid="uid://bcql4dsu7c1lt"]

[ext_resource type="Script" path="res://Scenes/Enemeys/hel.gd" id="1_lde8c"]
[ext_resource type="Texture2D" uid="uid://b7yb7s00m475s" path="res://Assets/Img/Hel.png" id="2_8d2fm"]
[ext_resource type="AudioStream" uid="uid://cecojcwmbri3t" path="res://Assets/Sounds/Hel_death_sound.mp3" id="3_0x65g"]
[ext_resource type="AudioStream" uid="uid://dsfpyw13lxay0" path="res://Assets/Sounds/shoot.mp3" id="4_686wb"]

[sub_resource type="LabelSettings" id="LabelSettings_r1b6h"]
font_size = 64

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3obk3"]
size = Vector2(208, 400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clax8"]
size = Vector2(208, 400)

[node name="Hel" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_lde8c")

[node name="Label" type="Label" parent="."]
offset_left = -192.0
offset_top = -288.0
offset_right = 192.0
offset_bottom = -170.0
text = "Hel"
label_settings = SubResource("LabelSettings_r1b6h")
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MovementTimer" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(-0.6, 0.6)
texture = ExtResource("2_8d2fm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_3obk3")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_clax8")

[node name="FireTickTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="FireBrunTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="IceSlowTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="LightStunTimer" type="Timer" parent="."]

[node name="EnemyDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0x65g")
bus = &"Sfx"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_686wb")
bus = &"Sfx"

[node name="EnemyHitSound" type="AudioStreamPlayer" parent="."]
bus = &"Sfx"

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout" flags=18]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout" flags=18]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered" flags=18]
[connection signal="timeout" from="FireTickTimer" to="." method="_on_fire_tick_timer_timeout"]
[connection signal="timeout" from="FireBrunTimer" to="." method="_on_fire_brun_timer_timeout"]
[connection signal="timeout" from="IceSlowTimer" to="." method="_on_ice_slow_timer_timeout"]
[connection signal="timeout" from="LightStunTimer" to="." method="_on_light_stun_timer_timeout"]
[connection signal="finished" from="EnemyDead" to="." method="_on_enemy_dead_finished"]
